--- a/grpcmock/Cargo.toml
+++ b/grpcmock/Cargo.toml
@@ -13,6 +13,9 @@ readme = "../README.md"
 keywords = ["mocking", "grpc-mocking", "grpc", "testing"]
 categories = ["development-tools", "development-tools::testing"]
 
+[lib]
+doctest = false
+
 [dependencies]
 bytes = "1.9.0"
 futures = "0.3.31"
